@@ -3,6 +3,7 @@
 export(IdTaxaToDataFrame)
 export(TAXONOMY_RANKS)
 export(ZTransform)
+export(addCluster)
 export(addContaminantQC)
 export(addNotContaminantQC)
 export(addPerSampleDominantFeatures)
@@ -17,7 +18,6 @@ export(calculateJSD)
 export(calculateNMDS)
 export(calculateOverlap)
 export(calculateUnifrac)
-export(cluster)
 export(countDominantFeatures)
 export(countDominantTaxa)
 export(estimateDivergence)
@@ -100,6 +100,7 @@ export(unsplitByRanks)
 export(unsplitOn)
 exportMethods("relabundance<-")
 exportMethods(ZTransform)
+exportMethods(addCluster)
 exportMethods(addContaminantQC)
 exportMethods(addHierarchyTree)
 exportMethods(addNotContaminantQC)
