@@ -1,11 +1,11 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/cluster.R
-\name{cluster}
-\alias{cluster}
-\alias{cluster,SummarizedExperiment-method}
+\name{addCluster}
+\alias{addCluster}
+\alias{addCluster,SummarizedExperiment-method}
 \title{Clustering wrapper}
 \usage{
-cluster(
+addCluster(
   x,
   BLUSPARAM,
   assay.type = assay_name,
@@ -17,7 +17,7 @@ cluster(
   ...
 )
 
-\S4method{cluster}{SummarizedExperiment}(
+\S4method{addCluster}{SummarizedExperiment}(
   x,
   BLUSPARAM,
   assay.type = assay_name,
@@ -59,7 +59,7 @@ transformation is applied sample (column) or feature (row) wise.
 \item{...}{Additional parameters to use altExps for example}
 }
 \value{
-\code{cluster} returns an object of the same type as the \code{x} parameter
+\code{addCluster} returns an object of the same type as the \code{x} parameter
 with clustering information named \code{clusters} stored in \code{colData}
 or \code{rowData}.
 }
@@ -83,10 +83,10 @@ data(GlobalPatterns, package = "mia")
 tse <- GlobalPatterns
 
 # Cluster on rows using Kmeans
-tse <- cluster(tse, KmeansParam(centers = 3))
+tse <- addCluster(tse, KmeansParam(centers = 3))
 
 # Clustering done on the samples using Hclust
-tse <- cluster(tse, 
+tse <- addCluster(tse, 
                MARGIN = "samples", 
                HclustParam(metric = "bray", dist.fun = vegan::vegdist))
 
