@@ -58,7 +58,7 @@ reference:
 - subtitle: Clustering
 - contents:
   - calculateDMN
-  - cluster
+  - addCluster
 - subtitle: decontam
 - contents:
   - isContaminant
